--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
     <title>Coming Soon!</title>
   </head>
   <body>
-    <p><h3>Sorry!</h3></p>
-    <p>This is page is still under construction. It will grow as I learn more about web dev :)</p>
+    <div id="header">
+      <div id="sorry">Sorry!</div>
+    </div>
+    <div id="message">
+      <p>This is page is still under construction. It will grow as I learn more about web development.</p>
+    </div>
   </body>
 </html>
