laid out the index site

--- a/index.html
+++ b/index.html
@@ -24,9 +24,23 @@
 
 
     <!--Content-->
-    <div id="wrapper">
-      <h2>Sorry!</h2>
-      <p>This site is under construction. It will grow more as I learn about web dev</p>
+    <div class="container">
+      <div id="wrapper">
+   	<div class="col-md-3">
+	  <h3>About Me</h3>
+	  <p>I'm a Computer Science student at the University of Michichan, and I've made this website to keep track of the projects that I've made at hackathons and the like</p>
+	  <p>If you want to get in contact with me, send me an email at <a href="mailto:packrat386@gmail.com">packrat386@gmail.com</a></p>
+	</div>
+	<div class="col-md-8">
+	  <h3>Recent Projects</h3>
+	  <p class="lead">Here are some of the most recent interesting things that I've worked on</p>
+	  <ul>
+	    <li>Live Report Companion</li>
+	    <li>Dota 2 Ranking</li>
+	    <li>This Website!</li>
+	  </ul>
+	</div>
+      </div>
     </div>
     <!--Scripts-->
     <script src="jquery/jquery.min.js"></script>
