--- a/index.html
+++ b/index.html
@@ -26,18 +26,19 @@
     <!--Content-->
     <div class="container">
       <div id="wrapper">
-   	<div class="col-md-3">
+   	<div id="about" class="col-md-3 well">
 	  <h3>About Me</h3>
 	  <p>I'm a Computer Science student at the University of Michichan, and I've made this website to keep track of the projects that I've made at hackathons and the like</p>
 	  <p>If you want to get in contact with me, send me an email at <a href="mailto:packrat386@gmail.com">packrat386@gmail.com</a></p>
 	</div>
-	<div class="col-md-8">
+	<div class="col-md-1"></div>
+	<div class="col-md-7">
 	  <h3>Recent Projects</h3>
-	  <p class="lead">Here are some of the most recent interesting things that I've worked on</p>
+	  <p>Here are some of the most recent interesting things that I've worked on</p>
 	  <ul>
-	    <li>Live Report Companion</li>
-	    <li>Dota 2 Ranking</li>
-	    <li>This Website!</li>
+	    <li><a href="#">Live Report Companion</a></li>
+	    <li><a href="#">Dota 2 Ranking</a></li>
+	    <li><a href="#">This Website!</a></li>
 	  </ul>
 	</div>
       </div>
