added some functionality for POST requests and started parser.js

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div id="wrapper">
    	<div id="about" class="col-md-3 well">
 	  <h3>About Me</h3>
-	  <p>I'm a Computer Science student at the University of Michichan, and I've made this website to keep track of the projects that I've made at hackathons and the like</p>
+	  <p>I'm a Computer Science student at the University of Michigan, and I've made this website to keep track of the projects that I've made at hackathons and the like</p>
 	  <p>If you want to get in contact with me, send me an email at <a href="mailto:packrat386@gmail.com">packrat386@gmail.com</a></p>
 	</div>
 	<div class="col-md-1"></div>
