awful fixes for the demo

--- a/distToolError.html
+++ b/distToolError.html
@@ -35,6 +35,7 @@
 	      <input type="submit" value="Get Code!">
 	    </form>
 	  </div>
+	  <h3>Sorry! It looks like you input something invalid, try again</h3>
       </div>
     </div>
   </body>
